--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>My First Webpage</title>
+        <meta charset="utf-8">
+        <title>practice</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <p>Something is <strong>very important</strong> thats how you know</p>
+        <p><em>you emphesize like this</em></p>
     </body>
 </html>
