practice blog on index.html

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>practice</title>
+        <title>Blog Of Today</title>
     </head>
     <body>
-        <p>Something is <strong>very important</strong> thats how you know</p>
-        <p><em>you emphesize like this</em></p>
+        <h2>Background</h2>
+        <p>I've never been particularly <em>good</em> at doing tasks that require a high level of eruditive intuition but i think that's a skill I can develop</p>
+        <h2>Thoughts</h2>
+        <p>One way I've tried to do that is through things like coding and forcing myself to change my <strong>mindset baby</strong></p>
     </body>
 </html>
