--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,7 @@
         <title>Blog Of Today</title>
     </head>
     <body>
+        <!-- something silly-->
         <h2>Background</h2>
         <p>I've never been particularly <em>good</em> at doing tasks that require a high level of eruditive intuition but i think that's a skill I can develop</p>
         <h2>Thoughts</h2>
