--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,6 +8,8 @@
     <h1>Homepage</h1>
     <p><a href="https://www.theodinproject.com/about" target="_blank" rel="noreferrer">About the odin project</a>
 </p>
-    <a href="about.html">About</a>
+    <a href="./pages/about.html">About</a>
+
+    <img src="./images/dog.jpg">
 </body>
 </html>
