more practice at SK

--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,5 +7,8 @@
 
   <body>
     <h1>About Page</h1>
+    <p>
+      <img src="../images/dog.jpg" alt="stupid dog" width="300"height="100">
+    </p>
   </body>
 </html>
