--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,8 +8,10 @@
     <h1>Homepage</h1>
     <p><a href="https://www.theodinproject.com/about" target="_blank" rel="noreferrer">About the odin project</a>
 </p>
-    <a href="./pages/about.html">About</a>
+   <p>
+     <a href="./pages/about.html">About</a>
+   </p>
 
-    <img src="./images/dog.jpg">
+    <img src="./images/dog.jpg" alt="stupid dog" height="150"width="150">
 </body>
 </html>
